// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Actualizar Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "15-1-2021",
      "hora": "13:40",
      "id": 1646084416067,
      "mascota": "Rambo",
      "propietario": "Fernando",
      "sintomas": "Solo come",
      "telefono": "6684414",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1646084416067,
      "mascota": "Hook",
      "propietario": "Fernando",
      "sintomas": "Solo duerme",
      "telefono": "1654321",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": Array [],
}
`;
